# FDE-Management-Platform

./: .env.example  .env.production.example  .gitignore  PLAN.md  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  manpower.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_cert_levels_drop_personal_rating.py  b2c3d4e5f6a7_need_party_logo_show_in_cockpit.py  c3d4e5f6a7b8_assignment_approval_workflow.py  d4e5f6a7b8c9_timesheet_slot_and_weighted_days.py  e5f6a7b8c9da_timesheet_approval_with_reject.py  f6a7b8c9dabc_engineer_status_2state.py  f8540d2f6dcd_baseline_schema_phase_3_feishu_hooks.py  g7h8i9j0k1l2_project_revenue_gross_amount.py  h8i9j0k1l2m3_project_bid_outcome.py  i9j0k1l2m3n4_collapse_value_basis_enum.py  j0k1l2m3n4o5_collapse_benchmark_basis.py  k1l2m3n4o5p6_project_revenue_non_service_expense.py  l2m3n4o5p6q7_drop_engineer_monthly_real_cost.py  m3n4o5p6q7r8_vendor_role_links.py  n4o5p6q7r8s9_skill_issuer_level.py  o5p6q7r8s9t0_project_summary_contact_engineer_comments.py  p6q7r8s9t0u1_need_party_type_default_external.py  q7r8s9t0u1v2_expense_engineer_link.py  r8s9t0u1v2w3_expense_two_stage_approval.py  s9t0u1v2w3x4_revenue_vendor_link_autosync_vsf.py  t0u1v2w3x4y5_drop_certificate_table.py  u1v2w3x4y5z6_drop_closing_status.py
backend/app/: main.py
backend/scripts/: migrate_sqlite_to_pg.py  seed_demo.py
backend/tests/: test_cockpit_isolation.py  test_health.py  test_profit_overall_formula.py  test_revenue_vsf_sync.py
(+214 files in other folders)
