[project]
name = "manpower-backend"
version = "0.1.0"
description = "Manpower Management Platform — Backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.12",
    "loguru>=0.7.2",
    "redis>=5.2.0",
    "rq>=2.0.0",
    "httpx>=0.27.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
